@@ -1,3 +1,6 @@
+- drakboot -boot
+  o update splash when changing framebuffer resolution (#27470)
+
 Version 10.4.135 -  08 June 2007, by Thierry Vignaud
 
 - interactive layer:
